--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -5,7 +5,7 @@
       <div id="error_explanation">
         <ul>
           <% task.errors.full_messages.each do |task| %>
-            <li><%= message %></li>
+            <li><%= task %></li>
         <% end %>
         </ul>
       </div>
