--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -15,5 +15,6 @@
   </tr>
 </table>
 
+<%= link_to '一覧へ戻る', tasks_path, class: 'btn btn-default' %>
 <%= link_to 'このメッセージを編集する', edit_task_path(@task), class: 'btn btn-default' %>
 <%= link_to 'このメッセージを削除する', @task, method: :delete, data: { confirm: '本当に削除してよろしいですか？' }, class: 'btn btn-danger' %>
